--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: TheCharlatan
+name: sedited
 
 # Short bio or description (displayed in the header)
 description: Reproducibility Matters
@@ -18,8 +18,8 @@ avatar: https://avatars3.githubusercontent.com/u/8421793?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   email: seb.kung@gmail.com
-  github: TheCharlatan
-  twitter: the_charlatan_
+  github: sedited
+  twitter: sedited_
 
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
